--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="yandex-verification" content="6e6fbced03447a8d" />
      <meta charset="UTF-8">
     <title></title>                                                                            
     <link rel="stylesheet" href="style.css">
